--- a/Dockerfile_cugraphops
+++ b/Dockerfile_cugraphops
@@ -11,28 +11,5 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-function(find_and_configure_nccl)
-
-    if(TARGET NCCL::NCCL)
-        return()
-    endif()
-
-    rapids_find_generate_module(NCCL
-            HEADER_NAMES  nccl.h
-            LIBRARY_NAMES nccl
-            )
-
-    # Currently NCCL has no CMake build-system so we require
-    # it built and installed on the machine already
-    rapids_find_package(NCCL REQUIRED)
-    
-    if(NCCL_FOUND)
-        MESSAGE(STATUS "NCCL_INCLUDE_DIRS: ${NCCL_INCLUDE_DIRS}")
-        MESSAGE(STATUS "NCCL_LIBRARIES: ${NCCL_LIBRARIES}")
-    endif()
-
-endfunction()
-
-find_and_configure_nccl()
-
-
+FROM gitlab-master.nvidia.com:5005/mstadler/docker/wholegraph:dev
+RUN conda install -y -c rapidsai-nightly libcugraphops pylibcugraphops 
