--- a/Dockerfile.dep-pyg-computelab
+++ b/Dockerfile.dep-pyg-computelab
@@ -13,10 +13,5 @@
 
 FROM gitlab-master.nvidia.com:5005/mstadler/docker/wholegraph:pyg-dep
 
-COPY . /workspace/lib/wholegraph
-RUN cd /workspace/lib/wholegraph &&\
-    mkdir build && cd build &&\
-    cmake -DCMAKE_BUILD_TYPE=Release .. &&\
-    make -j
-
-COPY ./export_env.sh /workspace/
+RUN useradd -r -u 1968 -g 30 mstadler
+USER mstadler
