--- a/Dockerfile.dgl
+++ b/Dockerfile.dgl
@@ -11,26 +11,12 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM gitlab-master.nvidia.com:5005/dl/dgx/dgl:22.12-pytorch-py3-devel
+FROM gitlab-master.nvidia.com:5005/mstadler/docker/wholegraph:dgl-dep
 
-RUN apt-get update && \
-    apt install -y gdb pybind11-dev git && \
-    apt install -y doxygen clang clang-tools
-RUN pip3 install "cmake>=3.23.1,!=3.25.0"
-RUN pip3 install unzip torchmetrics mpi4py "nanobind>0.0.7"
-RUN pip3 install flake8
-RUN pip3 install "scikit-build>=0.13.1"
+COPY . /workspace/lib/wholegraph
+RUN cd /workspace/lib/wholegraph &&\
+    mkdir build && cd build &&\
+    cmake -DCMAKE_BUILD_TYPE=Release .. &&\
+    make -j
 
-RUN apt-get install doxygen
-
-RUN cd /usr/lib &&\
-    wget https://anaconda.org/conda-forge/spdlog/1.8.5/download/linux-64/spdlog-1.8.5-h4bd325d_1.tar.bz2 &&\
-    wget https://anaconda.org/rapidsai/librmm/22.12.00/download/linux-64/librmm-22.12.00-cuda11_g8aae42d1_0.tar.bz2 &&\
-    wget https://anaconda.org/rapidsai/libraft-headers/22.12.00/download/linux-64/libraft-headers-22.12.00-cuda11_g9a716b7d_0.tar.bz2 &&\
-    tar -xf spdlog-1.8.5-h4bd325d_1.tar.bz2 --strip-components 1 &&\
-    tar -xf librmm-22.12.00-cuda11_g8aae42d1_0.tar.bz2 --strip-components 1 &&\
-    tar -xf libraft-headers-22.12.00-cuda11_g9a716b7d_0.tar.bz2 --strip-components 1
-
-RUN useradd -r -u 1968 -g 30 mstadler
-USER mstadler
-
+COPY ./export_env.sh /workspace/
