--- a/Dockerfile.cug-dgl-computelab
+++ b/Dockerfile.cug-dgl-computelab
@@ -11,13 +11,7 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM gitlab-master.nvidia.com:5005/mstadler/docker/wholegraph:pyg-dep
+FROM gitlab-master.nvidia.com:5005/mstadler/docker/wholegraph:cug-dgl
 
-COPY . /workspace/lib/wholegraph
-RUN cd /workspace/lib/wholegraph &&\
-    mkdir build && cd build &&\
-    cmake -DCMAKE_BUILD_TYPE=Release .. &&\
-    make -j
-
-ENV WHOLEGRAPH_PATH="/workspace/lib/wholegraph"
-ENV PYTHONPATH="${PYTHONPATH}:${WHOLEGRAPH_PATH}/python:${WHOLEGRAPH_PATH}/build"
+RUN useradd -r -u 1968 -g 30 mstadler
+USER mstadler
